feat: launch personal map checkout flow
